opam-version: "2.0"
name: "satysfi-class-cv-doc"
version: "0.2.0"
synopsis: "Documentation of a class for CV"
description: """Documentation of a class for CV."""

maintainer: "Masaki Waga <masakiwaga@gmail.com>"
authors: [
    "Masaki Waga <masakiwaga@gmail.com>"
]
license: "MIT"
homepage: "https://github.com/MasWag/cv-satysfi"
bug-reports: "https://github.com/MasWag/cv-satysfi/issues"
dev-repo: "git+https://github.com/MasWag/cv-satysfi.git"

depends: [
  "satysfi" {>= "0.0.6" & < "0.1.0"}
  "satyrographos" {>= "0.0.2.6" & < "0.0.3"}
  "satysfi-enumitem" {>= "3.0.1" & < "4.0.0"}
  "satysfi-dist"
]
  
build: [
  ["satyrographos" "opam" "build"
   "--name" "class-cv-doc"
   "--prefix" "%{prefix}%"
   "--script" "%{build}%/Satyristes"]
]
install: [
  ["satyrographos" "opam" "install"
   "--name" "class-cv-doc"
   "--prefix" "%{prefix}%"
   "--script" "%{build}%/Satyristes"]
]
