opam-version: "2.0"
name: "satysfi-class-cv"
version: "0.2.0"
synopsis: "SATySFi class file for Curriculum Vitae"
description: """
SATySFi class file for Curriculum Vitae
"""
maintainer: "Masaki Waga <masakiwaga@gmail.com>"
authors: [
    "Masaki Waga <masakiwaga@gmail.com>"
]
license: "MIT"
homepage: "https://github.com/MasWag/cv-satysfi"
bug-reports: "https://github.com/MasWag/cv-satysfi/issues"
dev-repo: "git+https://github.com/MasWag/cv-satysfi.git"
depends: [
  "satysfi" {>= "0.0.6" & < "0.1.0"}
  "satyrographos" {>= "0.0.2.6" & < "0.0.3"}
  "satysfi-base" {>= "1.2.1" & < "2.0.0"}
  "satysfi-fonts-asana-math" {>= "000.958+1+satysfi0.0.4"}
  "satysfi-parallel" {>= "0.0.1"}
  "satysfi-enumitem" {>= "3.0.1" & < "4.0.0"}
]
build: [
  ["satyrographos" "opam" "build"
   "--name" "class-cv"
   "--prefix" "%{prefix}%"
   "--script" "%{build}%/Satyristes"]
]
install: [
  ["satyrographos" "opam" "install"
   "--name" "class-cv"
   "--prefix" "%{prefix}%"
   "--script" "%{build}%/Satyristes"]
]
